--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,27 @@
+
+
+##############################POSTGRESQL########################
 #spring.datasource.url = jdbc:postgresql://localhost:5432/STC2
 #spring.datasource.username = postgres
 #spring.datasource.password = 1234
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.hibernate.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
-server.port=8082
 #spring.jpa.database-platform =org.hibernate.dialect.PostgreSQLDialect
 
-spring.h2.console.enabled=true
-spring.datasource.generate-unique-name=false
-spring.datasource.name=STC3
+
+##############################H2##################################
+#spring.h2.console.enabled=true
+#spring.datasource.generate-unique-name=false
+#spring.datasource.name=STC3
+
+
+################################MYSQL##############################
+server.port=8082
+spring.datasource.url = jdbc:mysql://localhost:3306/STC3
+spring.datasource.username = root
+spring.datasource.password =
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
